# freelance

./: .gitignore
AI for Chemistry/: 問題分析與改良方案.md  專案原理與運作說明.md
Algorithms/: Chapter2_Algorithm_Analysis_Teaching_Materials.md  HW3.cpp  README.md  card_game  card_game.c  ch2_binary_search  ch2_binary_search.cpp  ch2_fibonacci_analysis  ch2_fibonacci_analysis.cpp  ch2_gcd_exponentiation  ch2_gcd_exponentiation.cpp  ch2_loop_rules  ch2_loop_rules.cpp  ch2_max_subsequence_sum  ch2_max_subsequence_sum.cpp  ch2_sum_of_cubes  ch2_sum_of_cubes.cpp  circular  circular_linked_list.cpp  deque_array  deque_array.cpp  deque_linked_list  deque_linked_list.cpp  doubly  doubly_linked_list.cpp  dynamic_heap.c  flip_coins.c  hw3  nationalities.c  queue_array  queue_array.cpp  queue_linked_list  queue_linked_list.cpp  reverse_string.cpp  singly  singly_linked_list.cpp  stack_array  stack_array.cpp  stack_linked_list  stack_linked_list.cpp  (+1 more)
Arduino/: CODE_EXECUTION_FLOW.md  HeartRateAlgorithm.cpp  HeartRateAlgorithm.h  MAX30102_Driver.cpp  MAX30102_Driver.h  MAX30102_HealthMonitor.ino  QUICKSTART.md  README.md  SERIAL_LOGGING.md  SpO2Algorithm.cpp  SpO2Algorithm.h  TFT_eSPI_SETUP.md  display_config.h  display_driver.cpp  display_driver.h  platformio.ini  ui_manager.cpp  ui_manager.h
Bags/: BagsFactoryProcess.pptx
C Programming Language/: ADDITIONAL_TOPICS_SUMMARY.md  Assessment_Tests.md  C_Programming_Curriculum.md  Exercise_Solutions.md  INTERMEDIATE_LEVEL_ADDITIONS.md  README.md  SOLUTION_FILES_OVERVIEW.md  Setup_Guide.md  Teaching_Materials.md  create_all_solutions.py  generate_solutions.py  strtok_examples.c  test01.c  test02.c
C++/: Big O.txt  C++_Teaching_Material.md  COMPREHENSIVE_COMMENTS_ADDED.md  C_printf_____scanf___Format_Specifiers_Reference.csv  Exception_Handling.txt  (+108 more)
C++ New/: C++_Teaching_Curriculum.md  COMPLETE_LESSON_SUMMARY.md  Detailed_Lesson_Plans.md  Learning_Path_and_Prerequisites.md  Practical_Exercises_and_Examples.md  Teaching_Materials_Index.md  The_C++_Programming_Language.md
C++/Halcon/: CMakeLists.txt  COMPILATION_GUIDE.md  README.md  compile_all.sh  compile_single.sh  compile_with_clang.sh  halcon_advanced_01.cpp  halcon_advanced_02.cpp  halcon_advanced_03.cpp  halcon_advanced_04.cpp  halcon_advanced_05.cpp  halcon_advanced_06.cpp  halcon_basic_01.cpp  halcon_basic_02.cpp  halcon_basic_03.cpp  halcon_basic_04.cpp  halcon_basic_05.cpp  halcon_basic_06.cpp  halcon_basic_07.cpp  halcon_intermediate_01.cpp  halcon_intermediate_02.cpp  halcon_intermediate_03.cpp  halcon_intermediate_04.cpp  halcon_intermediate_05.cpp  halcon_intermediate_06.cpp  halcon_intermediate_07.cpp
C++/OpenCV/: 01_basic_image_load  01_basic_image_load.cpp  02_camera_capture  02_camera_capture.cpp  03_color_spaces  03_color_spaces.cpp  04_basic_drawing  04_basic_drawing.cpp  05_image_resize  05_image_resize.cpp  06_basic_filters  06_basic_filters.cpp  07_mouse_interaction  07_mouse_interaction.cpp  08_image_operations  08_image_operations.cpp  09_contour_detection  09_contour_detection.cpp  10_histogram_analysis  10_histogram_analysis.cpp  11_morphological_operations  11_morphological_operations.cpp  12_feature_detection  12_feature_detection.cpp  13_template_matching  13_template_matching.cpp  14_video_processing  14_video_processing.cpp  15_geometric_transforms  15_geometric_transforms.cpp  16_object_tracking  16_object_tracking.cpp  17_face_detection  17_face_detection.cpp  18_optical_flow  18_optical_flow.cpp  19_image_segmentation  19_image_segmentation.cpp  20_advanced_filters  20_advanced_filters.cpp  (+20 more)
C++/Silicon_Ignot_Deeplearning/cpp/: CMakeLists.txt  config.yaml
C++/Silicon_Ignot_Deeplearning/cpp/src/: CameraCapture.cpp  CameraCapture.h  ConfigManager.cpp  ConfigManager.h  DatabaseLogger.cpp  DatabaseLogger.h  DefectClassifier.cpp  DefectClassifier.h  ImagePreprocessor.cpp  ImagePreprocessor.h  MatlabEngineWrapper.cpp  MatlabEngineWrapper.h  main.cpp
C++/Silicon_Wafer_Ingots_OpenCV_Matlab/src/cpp/: CMakeLists.txt  camera_interface.cpp  camera_interface.h  image_capture.cpp  image_capture.h  main.cpp  preprocessor.cpp  preprocessor.h
C++/matlab/: CMakeLists.txt  DIRTY_LENS_CORRECTION_README.md  README.md  camera_advanced_21.cpp  camera_advanced_22.cpp  camera_advanced_23.cpp  camera_advanced_24.cpp  camera_advanced_25.cpp  camera_advanced_26.cpp  camera_advanced_27.cpp  camera_advanced_28.cpp  camera_advanced_29.cpp  camera_advanced_30.cpp  camera_basic_01.cpp  camera_basic_02.cpp  camera_basic_03.cpp  camera_basic_04.cpp  camera_basic_05.cpp  camera_basic_06.cpp  camera_basic_07.cpp  camera_basic_08.cpp  camera_basic_09.cpp  camera_basic_10.cpp  camera_dirty_lens_correction.cpp  camera_intermediate_11.cpp  camera_intermediate_12.cpp  camera_intermediate_13.cpp  camera_intermediate_14.cpp  camera_intermediate_15.cpp  camera_intermediate_16.cpp  camera_intermediate_17.cpp  camera_intermediate_18.cpp  camera_intermediate_19.cpp  camera_intermediate_20.cpp  compile_all.sh  dirty_lens_correction_analysis.m
C++_4th/Capstone_Project/: CMakeLists.txt  README.md
C++_4th/Capstone_Project/examples/: vector_example.cpp
C++_4th/Capstone_Project/include/mini_stl/: algorithm.h  map.h  thread_pool.h  vector.h
CICD/sample_python_app/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
CICD/sample_python_app/.github/workflows/: cd.yml  ci.yml
CICD/sample_python_app/app/: __init__.py  api.py
CICD/sample_python_app/infra/: main.tf  variables.tf
CICD/sample_python_app/infra/eks/: cluster.tf  iam.tf  main.tf  node-groups.tf  outputs.tf  security-groups.tf  variables.tf  vpc.tf
CICD/sample_python_app/infra/k8s/: configmap.tf  deployment.tf  main.tf  namespace.tf  outputs.tf  service.tf  variables.tf
CICD/sample_python_app/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
CICD/sample_python_app/scripts/: smoke_test.py
CICD/sample_python_app/tests/: test_api.py
CrazyFly/cpp/: CMakeLists.txt
CrazyFly/cpp/firmware/: README.md
CrazyFly/cpp/high_freq_control/: real_time_controller.cpp
CrazyFly/cpp/utils/: README.md
(+38261 files in other folders)
