[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-app"
version = "0.1.0"
description = "Teaching app for CI/CD workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "httpx",
  "tox",
  "ruff",
  "black",
  "mypy",
  "pip-audit",
  "build"
]

[project.urls]
homepage = "https://example.com/sample-python-app"
repository = "https://github.com/example/sample-python-app"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true

